# mario

./: README.md  app.cpp  even_perfect_numbers.xlsx  main.py  nnn.py  pyproject.toml  settings.json
